adds parser combinator poc

--- a/figtree/figtree.fsproj
+++ b/figtree/figtree.fsproj
@@ -9,6 +9,7 @@
     <Compile Include="Match.fs" />
     <Compile Include="Recognize.fs" />
     <Compile Include="Produce.fs" />
+    <Compile Include="Combinator.fs" />
   </ItemGroup>
 
   <ItemGroup>
