--- a/tests/tests.fsproj
+++ b/tests/tests.fsproj
@@ -1,28 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-
-    <IsPackable>false</IsPackable>
-    <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="../figtree/figtree.fsproj" />
   </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0"/>
+    <Compile Include="Utils.fs" />
+    <Compile Include="Verify.fs" />
+    <Compile Include="Recognize.fs" />
+    <Compile Include="Combinator.fs" />
+    <Compile Include="OpenTree.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
-
-  <ItemGroup>
-    <Compile Include="Utils.fs"/>
-    <Compile Include="Verify.fs"/>
-    <Compile Include="Recognize.fs"/>
-    <Compile Include="Combinator.fs"/>
-  </ItemGroup>
-
 </Project>
