* Adds CI  * Migrates to Paket

--- a/figtree/figtree.fsproj
+++ b/figtree/figtree.fsproj
@@ -1,9 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="Rule.fs" />
     <Compile Include="Match.fs" />
@@ -12,9 +11,8 @@
     <Compile Include="Combinator.fs" />
     <Compile Include="OpenTree.fs" />
   </ItemGroup>
-
   <ItemGroup>
     <Content Include="*.fsproj; **\*.fs; **\*.js" PackagePath="fable" />
   </ItemGroup>
-
+  <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
