--- a/examples/examples.fsproj
+++ b/examples/examples.fsproj
@@ -1,6 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netcoreapp5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="../figtree/figtree.fsproj" />
@@ -8,4 +9,5 @@
   <ItemGroup>
     <Compile Include="Json.fs" />
   </ItemGroup>
+  <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
