--- a/figtree/figtree.fsproj
+++ b/figtree/figtree.fsproj
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk" InitialTargets="SetVersion">
   <PropertyGroup>
+    <RepositoryUrl>https://github.com/nikhedonia/figtree</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
+
   <ItemGroup>
     <Compile Include="Rule.fs" />
     <Compile Include="Match.fs" />
@@ -11,8 +14,12 @@
     <Compile Include="Combinator.fs" />
     <Compile Include="OpenTree.fs" />
   </ItemGroup>
+
   <ItemGroup>
-    <Content Include="*.fsproj; **\*.fs; **\*.js" PackagePath="fable" />
+    <Content Include="*.fsproj; *.fs; *.fsi" PackagePath="fable" />
   </ItemGroup>
+
+  <Import Project="..\Version.targets" />
+
   <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
