--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,20 @@
-name: CI
+name: Main
 
 on: [push]
 
 jobs:
-
-  build:
+  main:
     runs-on: ubuntu-latest
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: true
       DOTNET_NOLOGO: true
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - name: Setup .NET Core SDK
-      uses: actions/setup-dotnet@v1.7.2
+      uses: actions/setup-dotnet@v4.3.1
       with:
-        dotnet-version: 5.0.100
+        dotnet-version: 8.0.x
 
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
     - name: Build and test
