--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,8 +6,7 @@ on:
       - 'v*'
 
 jobs:
-
-  build:
+  publish:
     runs-on: ubuntu-latest
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: true
@@ -15,9 +14,9 @@ jobs:
 
     steps:
     - name: Setup .NET Core SDK
-      uses: actions/setup-dotnet@v1.7.2
+      uses: actions/setup-dotnet@v4.3.1
       with:
-        dotnet-version: 5.0.100
+        dotnet-version: 8.0.x
 
     - uses: actions/checkout@v2
 
